--- a/css/stopwatch.css
+++ b/css/stopwatch.css
@@ -1,102 +1,101 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.container{
-    background-color: #27373b;
-    width: 40%;
-    min-width: 500px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding-top: 0;
-    padding-bottom: 60px;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-                rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, 
-                rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+.container {
+  background-color: #27373b;
+  width: 90%;
+  max-width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-top: 0;
+  padding-bottom: 8vh;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4), 0 7px 13px -3px rgba(0, 0, 0, 0.3),
+    0 -3px 0 inset rgba(0, 0, 0, 0.2);
 }
 
-.timer-Display{
-    opacity: 0.6;
-    width: 100%;
-    background: #9e9e9e;
-    padding: 40px 0;
-    font-family: "Roboto", sans-serif;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4rem;
-    border-radius: 10px 10px 0 0;
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-                rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, 
-                rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, 
-                rgba(0, 0, 0, 0.06) 0px 2px 1px, 
-                rgba(0, 0, 0, 0.09) 0px 4px 2px, 
-                rgba(0, 0, 0, 0.09) 0px 8px 4px, 
-                rgba(0, 0, 0, 0.09) 0px 16px 8px, 
-                rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
-.timer-Display:hover{
-    opacity: 0.9;
-    width: 100%;
-    background: #9e9e9e;
-    padding: 40px 0;
-    font-family: "Roboto", sans-serif;
-    color: #080808;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4rem;
-    border-radius: 10px 10px 0 0;
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-                rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, 
-                rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, 
-                rgba(0, 0, 0, 0.06) 0px 2px 1px, 
-                rgba(0, 0, 0, 0.09) 0px 4px 2px, 
-                rgba(0, 0, 0, 0.09) 0px 8px 4px, 
-                rgba(0, 0, 0, 0.09) 0px 16px 8px, 
-                rgba(0, 0, 0, 0.09) 0px 32px 16px;
+.timer-Display {
+  opacity: 0.6;
+  width: 100%;
+  background: #9e9e9e;
+  padding: 8vh 0;
+  font-family: "Roboto", sans-serif;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4vw;
+  border-radius: 10px 10px 0 0;
+  box-shadow: 0 -23px 25px 0px inset rgba(0, 0, 0, 0.17),
+    0 -36px 30px 0px inset rgba(0, 0, 0, 0.15),
+    0 -79px 40px 0px inset rgba(0, 0, 0, 0.1), 0 2px 1px rgba(0, 0, 0, 0.06),
+    0 4px 2px rgba(0, 0, 0, 0.09), 0 8px 4px rgba(0, 0, 0, 0.09),
+    0 16px 8px rgba(0, 0, 0, 0.09), 0 32px 16px rgba(0, 0, 0, 0.09);
 }
 
-.laps{
-    text-align: center;
-    color: white;
-    margin-top: 10px;
-    text-decoration: none;
+.timer-Display:hover {
+  opacity: 0.9;
+  width: 100%;
+  background: #9e9e9e;
+  padding: 8vh 0;
+  font-family: "Roboto", sans-serif;
+  color: #080808;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4vw;
+  border-radius: 10px 10px 0 0;
+  box-shadow: 0 -23px 25px 0px inset rgba(0, 0, 0, 0.17),
+    0 -36px 30px 0px inset rgba(0, 0, 0, 0.15),
+    0 -79px 40px 0px inset rgba(0, 0, 0, 0.1), 0 2px 1px rgba(0, 0, 0, 0.06),
+    0 4px 2px rgba(0, 0, 0, 0.09), 0 8px 4px rgba(0, 0, 0, 0.09),
+    0 16px 8px rgba(0, 0, 0, 0.09), 0 32px 16px rgba(0, 0, 0, 0.09);
 }
 
-.buttons{
-    width: 85%;
-    margin: 60px auto 0 auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
+.laps {
+  text-align: center;
+  color: white;
+  margin-top: 2vh;
+  text-decoration: none;
 }
 
-.buttons button{
-    padding: 10px 20px;
-    background-color: #ffffff;
-    color: #141313;
-    border: none;
-    font-family:  "Roboto", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, 
-                rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, 
-                rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+.buttons {
+  width: 85%;
+  margin: 6vh auto 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-gap: 3vw;
 }
 
-.buttons button:hover{
-    background-color:#141313 ;
-    color: #ffffff;
-    border: 3px solid #b6b6b6;
-    padding: 7px 17px;
-    
-} 
+.buttons button {
+  padding: 1vh 2vw;
+  background-color: #ffffff;
+  color: #141313;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 3.5vw;
+  font-weight: 500;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4), 0 7px 13px -3px rgba(0, 0, 0, 0.3),
+    0 -3px 0 inset rgba(0, 0, 0, 0.2);
+}
+
+.buttons button:hover {
+  background-color: #141313;
+  color: #ffffff;
+  border: 3px solid #b6b6b6;
+  padding: 0.8vh 1.7vw;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 90%;
+    max-width: none;
+  }
+}
